replicated data to branch1 for the purpose of hosting website without database

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 $email = $_POST['email'];
 
 use Phppot\Subscriber;
@@ -7,7 +7,7 @@ require_once 'Model/subscribers.php';
 $subscriber = new Subscriber();
 $registrationResponse = $subscriber->subscribeEmail();
 
-?>
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 
